# src/controllers/auth.controller.ts
@@ -23,12 +23,27 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
+    password: Yup.string().required().min(6, "password must be at least 6 characters").test('at-least-one-uppercase-letter', "Contains at least one uppercase letter", (value)=> {
+        if(!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+
+        return regex.test(value);
+    })
+    .test('at-least-one-number', "Contains at least one uppercase letter", (value)=> {
+        if(!value) return false;
+        const regex = /^(?=.*\d)/;
+
+        return regex.test(value);
+    }),
     confirmPassword: Yup.string().required().oneOf([Yup.ref('password'), ""], "passwords not match")
 })
 
 export default {
    async register( req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+
+     */
     const { fullName, username, email, password, confirmPassword
     } = req.body as unknown as TRegister;
 
@@ -64,6 +79,7 @@ export default {
    async login(req: Request, res: Response) {
 
     /**
+      #swagger.tags = ['Auth']
       #swagger.requestBody = {
           required: true,
           schema: {
@@ -86,6 +102,7 @@ export default {
                 username: identifier
                },
            ],
+           isActive: true
        });
 
        if (!userByIdentifier) {
@@ -105,10 +122,11 @@ export default {
         });
        } 
 
-       const token =  generateToken({
-        id: userByIdentifier._id,
-        role: userByIdentifier.role,
-       }) 
+        const token = generateToken({
+            id: userByIdentifier._id,
+            role: userByIdentifier.role,
+        });
+
 
        res.status(200).json({
         message: "login success",
@@ -126,6 +144,7 @@ export default {
    async me(req: IRequest, res: Response) {
  
     /**
+      #swagger.tags = ['Auth']
       #swagger.security = [{
         "bearerAuth": []
       }]
@@ -147,4 +166,41 @@ export default {
         }) 
     }
    },
+
+   async activation(req: Request, res: Response) {
+
+    /**
+      #swagger.tags = ['Auth']
+      #swagger.requestBody = {
+          required: true,
+          schema: {
+              $ref: "#/components/schemas/ActivationRequest"
+          }
+      }
+     */
+        try {
+           const {code} = req.body as {code: string};
+           
+           const user = await UserModel.findOneAndUpdate({
+            activationCode: code,
+           }, {
+            isActive: true,
+           },
+           {
+            new: true,
+           }
+        );
+        res.status(200).json({
+            message: "user successfully activated",
+            data: user
+        })
+        } catch (error) {
+             const err = error as unknown as Error;
+            res.status(400).json({
+            message: err.message,
+            data: null,
+        }) 
+        }
+   }
 };
+
