# src/models/user.model.ts
@@ -1,6 +1,8 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
 
+import {renderMailHtml, sendEmail} from '../utils/mail/mail'
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 export interface User {
     fullName : string;
     username : string;
@@ -10,6 +12,7 @@ export interface User {
     profilePicture: string;
     isActive: boolean;
     activationCode: string;
+    createdAt: string;
 }
 
 const Schema = mongoose.Schema;
@@ -21,11 +24,13 @@ const UserSchema = new Schema<User>({
     },
     username: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     email: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     password: {
         type: Schema.Types.String,
@@ -58,7 +63,36 @@ UserSchema.methods.toJSON = function () {
 UserSchema.pre("save", function(next) {
     const user = this;
     user.password = encrypt(user.password);
+    user.activationCode = encrypt(user.id); 
     next();
+});
+
+UserSchema.post("save", async function (doc, next) {
+   try {
+     const user = doc;
+
+    console.log("send email to :", user);
+
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+        username: user.username,
+        fullName: user.fullName,
+        email: user.email,
+        createdAt: user.createdAt,
+        activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+
+    await sendEmail({
+        from: EMAIL_SMTP_USER,
+        to: user.email,
+        subject: "aktivasi akun anda",
+        html: contentMail
+    });
+
+   } catch (error) {
+    console.log(error)
+   } finally {
+    next();
+   }
 });
 
 const UserModel = mongoose.model("User", UserSchema);
